updated the vite-api-base-url

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,7 @@ SUPABASE_TASKS_TABLE=tasks
 SUPABASE_PROFILES_TABLE=profiles
 STRIPE_SECRET_KEY=
 STRIPE_PRICE_ID=
+STRIPE_WEBHOOK_SECRET=
 FRONTEND_URL=http://localhost:5173
 FREE_PLAN_LIMIT=4
 PREMIUM_PLAN_LIMIT=20
